--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
-yt-dlp==2023.10.13
-google-generativeai==0.3.2
-pydantic==2.5.0
-requests==2.31.0
-python-dotenv==1.0.0
+uvicorn==0.24.0
+yt-dlp
+google-generativeai
+pydantic
+requests
